# transactvault

./: .dockerignore  .env-example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  PROMPT.md  README.md  docker-compose.services.yml  docker-compose.yml  prompt2.md
db/: schema.surql
deploy/rustfs/: Dockerfile
deploy/surrealdb/: Dockerfile
src/: audit.rs  billing.rs  config.rs  email.rs  error.rs  events.rs  forms.rs  main.rs  router.rs  security.rs  state.rs  storage.rs  stripe.rs  templates.rs  tests_http.rs
src/auth/: claims.rs  middleware.rs  mod.rs  password.rs
src/controllers/: admin.rs  auth.rs  checklists.rs  comments.rs  common.rs  documents.rs  forms.rs  health.rs  marketing.rs  members.rs  mod.rs  orphan.rs  profile.rs  subscribe.rs  tiers.rs  transactions.rs  webhooks.rs
src/db/: forms.rs  mod.rs  seed.rs  tier_seed.rs
src/models/: audit.rs  brokerage.rs  checklist.rs  comment.rs  document.rs  invitation.rs  mod.rs  tier.rs  transaction.rs  user.rs
static/css/: main.css
static/js/: audit-infinite-scroll.js  avatar-cropper.js  checklist-state.js  confirm-action.js  deny-flow.js  format-money.js  forms-reorder.js  infinite-scroll.js
templates/: base.html
templates/components/: app_header.html  applies_picker.html  public_footer.html  public_header.html
templates/pages/: admin_audit.html  admin_brokerage_detail.html  admin_brokerages.html  admin_changelog.html  admin_form_edit.html  admin_form_set.html  admin_forms.html  admin_tier_edit.html  admin_tiers.html  admin_users.html  brand.html  broker_forms.html  brokerage_audit.html  brokerage_delete.html  dashboard.html  invite.html  landing.html  login.html  no_brokerage.html  pricing.html  profile.html  search.html  signup.html  team.html  transaction_edit.html  transaction_new.html  transaction_show.html  transactions_list.html  unassigned.html  verify_pending.html  verify_result.html
templates/partials/: audit_rows.html  compliance_panel.html  search_results.html  stat_grid.html  transaction_rows.html  tx_results.html  tx_toolbar.html
