[package]
name = "transactvault"
version = "0.3.1"
edition = "2024"
description = "TransactVault — modern real estate transaction management for California brokerages."
# Proprietary, all rights reserved — source is public on GitHub for
# transparency and security review, NOT under an OSI-approved license.
# See LICENSE.md for full terms and commercial-licensing contact.
license-file = "LICENSE.md"
publish = false

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "3", features = ["kv-mem", "kv-surrealkv"] }
askama = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs", "timeout", "catch-panic"] }
tower-cookies = "0.11"
uuid = { version = "1", features = ["v7", "serde"] }
futures = "0.3"
sysinfo = "0.33"
humansize = "2"
humantime = "2"
num-format = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
mime = "0.3"
http = "1"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
# Direct HTTP client for the Postmark transactional-email API. The
# Postmark REST surface we use is a single `POST /email` call, so a
# third-party crate would add more deps than the client we write
# ourselves. `rust-s3` already pulls reqwest transitively; declaring it
# directly here keeps the version pin visible and the feature set
# explicit (rustls — no system-native-tls — and json bodies).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# `async-stripe` 0.x. We pick exactly the features we use to keep
# compile time + dep tree minimal: billing (Product / Price /
# Subscription / Invoice), checkout (Session), webhook-events (signed
# event parsing), and runtime-tokio-rustls (no native-tls).
async-stripe = { version = "0.41", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing", "checkout", "connect", "webhook-events"] }
bytes = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
urlencoding = "2"
# Markdown → HTML for the in-app changelog viewer. CommonMark-compliant,
# pure-Rust, no JS-bridge. Used by the admin changelog page to render
# CHANGELOG.md without bundling a frontend renderer.
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
# Test-only: read SSE response bodies one frame at a time so tests
# can assert on the first event without `to_bytes` hanging on the
# stream's never-coming end.
http-body-util = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
